fixed overflow text in statusmessage panel

--- a/src/main/webapp/stylesheets/teammatesCommon.css
+++ b/src/main/webapp/stylesheets/teammatesCommon.css
@@ -243,6 +243,11 @@ Apply to thead to make headers not bold.
     padding-top: 0;
 }
 
+.table {
+    table-layout: fixed;
+    word-wrap: break-word;
+}
+
 .text-large {
     font-size: 18px;
 }
